1903 [Job] if the executable cannot be started the file will be deleted and an update detection will be triggered
1900 [Update] moved MediaInfoWrapper.dll from the MediaInfo package to a dedicated download package
1899 [Update] added 7-Zip support
     [Update] enhanced log entries
1898 improved M2TS bitrate calculation. Patch by Selur
1897 [AutoEncode] cosmetic bitrate rounding
1896 removed mencoder
1895 [Snow] replaced mencoder with ffmpeg
1894 [pre-rendering job] replaced mencoder with ffmpeg for MeGUI x86
     [pre-rendering job] fixed problem if the output file already exists. Bug #3018152
1893 [Job] improved deleting of files after a job has been aborted
1891 [pre-rendering job] added full status update to the progress window if using MeGUI x64. Bug #3018150
1890 [pre-rendering job] changed AVISource to FFVideoSource 
     [pre-rendering job] added the corresponding FFIndex job
1889 [OneClick] removed the blocking popup in case of an error during source type detection. instead the error message will be written into the log. Feature request #3148688
1888 [AVS Cutter] fixed async audio with fades. Bug #2945637
1887 [Log] fixed missing log entries in the preliminary log file
1886 [Update] removed core file date check
1885 [HD Streams Extractor] added a warning if a gaps file is created
1884 [Update] fixed problem with applying core update
  
1883
  - (zathor) [MP4 Muxer] fixed tmp directory handling. Bug #3129545
  - (zathor) [Update] changed update detection. Some/all downloads may need to be reapplied once.
  - (zathor) [Update] added the update date to the update window
  - (zathor) [Log] added preliminary log file writing. the well formed file will be written during closing.
  - (zathor) fixed main window height saving
  - (zathor) [Update] added update log entries also to the main log
  - (zathor) [Audio Cutter] fixed problem with some non 7bit ASCII path/file names. Bug #3144278
  - (zathor) changed version numbers to the svn build number